# free-api-mcp

./: .gitignore  API_EXPANSION_PLAN.md  API_EXPANSION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  FEATURE_OVERVIEW.md  FINAL_API_STATUS_REPORT.md  FINAL_SUMMARY.md  MCP_CONFIGURATION.md  MCP_SETUP_GUIDE.md  PROJECT_STRUCTURE.md  README.md  debug_mcp.py  free-api-server.py  mcp-config-example.json  pyproject.toml  test_regression.py
.kiro/settings/: mcp.json
.kiro/specs/free-api-mcp-expansion/: tasks.md
src/: __init__.py  main.py
src/core/: config.py  error_handler.py  fallback_manager.py  http_client.py
src/services/: content_service.py  crypto_service.py  entertainment_service.py  exchange_service.py  ip_service.py  utility_service.py
tests/: test_api_functions.py  test_backup_content.py  test_core_refactor.py  test_crypto_reset.py  test_crypto_service.py  test_crypto_unit.py  test_enhanced_ip.py  test_enhanced_ip_unit.py  test_exchange_rate.py  test_exchange_rate_reset.py  test_exchange_rate_unit.py  test_quotes_jokes.py  test_quotes_jokes_unit.py  test_security_fix.py
